Fix bug in thumbnail generation